// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when config does not match rule schema should not be valid 1`] = `
Object {
  "category": "error",
  "fileMap": Object {
    "fullPath": "file/path",
    "lineNumber": 0,
  },
  "message": "\\"explainer\\" is required at path data/explainer",
  "sourceMap": null,
  "validatorName": "LoadPluginConfiguration",
}
`;

exports[`when config does not match rule schema should not be valid 2`] = `
Object {
  "category": "error",
  "fileMap": Object {
    "fullPath": "file/path",
    "lineNumber": 0,
  },
  "message": "\\"notexplainer\\" is not allowed at path data/notexplainer",
  "sourceMap": null,
  "validatorName": "LoadPluginConfiguration",
}
`;

exports[`when config does not match rule schema should not be valid 3`] = `
Object {
  "category": "error",
  "fileMap": Object {
    "fullPath": "file/path",
    "lineNumber": 0,
  },
  "message": "Rule named \\"not valid rule\\" is not a valid plugin rule.",
  "sourceMap": null,
  "validatorName": "LoadPluginConfiguration",
}
`;
